Macro/skim/logs/19545448_0.err
input_line_9:2:35: error: expected expression
 FlatMix(0*100000, (0+1)*100000-1,) /* '.x' tries to invoke a function with the same name as the macro */
                                  ^
